Refactor swagger types
Move swagger type to utils
